--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,6 +64,10 @@ span.it-about-2-more-icon img {
     max-width: 24px;
 }
 
+.it-team-details-thumb img {
+    width: 100%;
+}
+
 /* start Responsive */
 
 
