--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,6 +68,12 @@ span.it-about-2-more-icon img {
     width: 100%;
 }
 
+
+.elementor-widget-container .it-cta-5-thumb img {
+ 
+    height: 100%;
+}
+
 /* start Responsive */
 
 
