--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,7 +72,10 @@ span.it-about-2-more-icon img {
 .elementor-widget-container .it-cta-5-thumb img {
  
     height: 100%;
+    width: 100%;
 }
+
+
 
 /* start Responsive */
 
