service 4 bg shap added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,6 +76,11 @@ span.it-about-2-more-icon img {
 }
 
 
+.elementor-widget-container .it-cta-4-thumb img {
+   
+    width: 100%;
+}
+
 
 /* start Responsive */
 
